feat: add media queries for multiple resoltutions

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="">
   <head>
     <meta charset="" />
-    <meta name="viewport" content="width=, initial-scale=" />
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <script
       src="https://kit.fontawesome.com/aab7f370d2.js"
       crossorigin="anonymous"
