--- a/index.html
+++ b/index.html
@@ -1,85 +1,153 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
   <head>
-    <meta charset="" />
-    <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <title>Trivia Quiz Game</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+
+    <!-- Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Baloo+Chettan+2|Baloo+Thambi+2|Dosis|Varela+Round&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Style -->
+    <link rel="stylesheet" href="src/style.css" />
+  </head>
+  <body>
+    <div
+      class="fluid-container mainContainer min-vh-100 d-flex align-items-center justify-content-center"
+    >
+      <div class="row w-100">
+        <div class="col col-md-8 col-xl-6 offset-md-2 offset-xl-3">
+          <div class="middleContainer">
+            <div
+              class="card card-bg-custom firstContainer"
+              id="jsDisplayToggle"
+            >
+              <div
+                class="card-header d-flex justify-content-center align-items-center"
+              >
+                <img
+                  class="img-fluid img-custom d-md-block"
+                  src="./img/logo.png"
+                  alt=""
+                />
+                <span class="card-title h1 pl-2"
+                  ><span class="d-none d-md-inline-block">Trivia</span> Quiz
+                  Game</span
+                >
+              </div>
+              <div class="card-body px-md-5 pt-md-4 d-block">
+                <div class="form-group p-2">
+                  <label for="" class="h4 font-weight-normal"
+                    >Number of Questions:</label
+                  >
+                  <input
+                    type="number"
+                    class="form-control input-font-size"
+                    name="trivia_amount"
+                    id="trivia_amount"
+                    min="1"
+                    max="50"
+                    value="10"
+                  />
+                  <small id="NumberHelp" class="form-text text-black"
+                    >Enter a number between 1 and 50.</small
+                  >
+                </div>
+                <div class="form-group p-2">
+                  <label for="trivia_category" class="h4 font-weight-normal"
+                    >Select Category:</label
+                  >
+                  <select
+                    name="trivia_category"
+                    class="form-control input-font-size"
+                    id="trivia_category"
+                  >
+                    <option value="any">Any Category</option>
+                  </select>
+                </div>
+                <div class="form-group p-2">
+                  <label for="trivia_difficulty" class="h4 font-weight-normal">
+                    Select Difficulty:
+                  </label>
+                  <select
+                    name="trivia_difficulty"
+                    class="form-control input-font-size"
+                    id="trivia_difficulty"
+                  >
+                    <option value="any">Any Difficulty</option>
+                    <option value="easy">Easy</option>
+                    <option value="medium">Medium</option>
+                    <option value="hard">Hard</option>
+                  </select>
+                </div>
+                <div class="form-group p-2">
+                  <label for="trivia_type" class="h4 font-weight-normal"
+                    >Select Type:</label
+                  >
+                  <select
+                    name="trivia_type"
+                    class="form-control input-font-size"
+                    id="trivia_type"
+                  >
+                    <option value="any">Any Type</option>
+                    <option value="multiple">Multiple Choice</option>
+                    <option value="boolean">True / False</option>
+                  </select>
+                </div>
+                <div class="form-group p-2 noMargin">
+                  <div class="row">
+                    <div class="col col-md-8 ButtonContainer">
+                      <button
+                        class="btn w-100 mainButton btn-custom"
+                        id="StartGame"
+                      >
+                        Start The Game
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Optional JavaScript -->
+    <!-- FontAwesome -->
     <script
       src="https://kit.fontawesome.com/aab7f370d2.js"
       crossorigin="anonymous"
     ></script>
-    <link href="https://fonts.googleapis.com/css?family=Baloo+Chettan+2|Baloo+Thambi+2|Dosis|Varela+Round&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css" />
-    <title>Trivia Quiz Game</title>
-  </head>
-  <body>
-    <div class="mainContainer">
-      <div class="middleContainer">
-      <div class="firstContainer" id="jsDisplayToggle">
-        <div class="TitleContainer">
-          <h1 class="titleText">trivia quiz game</h1>
-        </div>
-        <div class="inputContainer">
-          <label for="trivia_amount" class="inputLabel"
-            >Number of Questions:</label
-          >
-          <input
-            type="number"
-            class="form-control"
-            name="trivia_amount"
-            id="trivia_amount"
-            min="1"
-            max="50"
-            value="10"
-          />
-        </div>
-        <div class="inputContainer">
-          <label for="trivia_category" class="inputLabel"
-            >Select Category:</label
-          >
-          <select
-            name="trivia_category"
-            class="form-control"
-            id="trivia_category"
-          >
-            <option value="any">Any Category</option>-->
-          </select>
-        </div>
-        <div class="inputContainer">
-          <label for="trivia_difficulty" class="inputLabel"
-            >Select Difficulty:</label
-          >
-          <select
-            name="trivia_difficulty"
-            class="form-control"
-            id="trivia_difficulty"
-          >
-            <option value="any">Any Difficulty</option>
-            <option value="easy">Easy</option>
-            <option value="medium">Medium</option>
-            <option value="hard">Hard</option>
-          </select>
-        </div>
-        <div class="inputContainer">
-          <label for="trivia_type" class="inputLabel"
-            >Select Type:</label
-          >
-          <select
-            name="trivia_type"
-            class="form-control"
-            id="trivia_type"
-          >
-          <option value="any">Any Type</option>
-          <option value="multiple">Multiple Choice</option>
-          <option value="boolean">True / False</option>
-          </select>
-        </div>
-
-        <div class="inputContainer buttonContainer">
-          <button class="mainButton" id="StartGame">Start The Game</button>
-        </div>
-      </div>
-
-    </div>
+    <!-- Custom Js File -->
+    <script src="src/scripte.js"></script>
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
   </body>
-  <script src="scripte.js"></script>
 </html>
