update: - refactoring the code, 		- splitting script.js to modules, 		- installing webpack and babel packages for better readability and maintenance

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
       rel="stylesheet"
     />
     <!-- Style -->
-    <link rel="stylesheet" href="src/style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div
@@ -40,7 +40,7 @@
               >
                 <img
                   class="img-fluid img-custom d-md-block"
-                  src="./img/logo.png"
+                  src="../img/logo.png"
                   alt=""
                 />
                 <span class="card-title h1 pl-2"
@@ -132,7 +132,7 @@
       crossorigin="anonymous"
     ></script>
     <!-- Custom Js File -->
-    <script src="src/scripte.js"></script>
+    <script src="../dist/bundle.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
