update: move index.html to project main folder

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       rel="stylesheet"
     />
     <!-- Style -->
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./src/style.css" />
   </head>
   <body>
     <div
@@ -132,7 +132,7 @@
       crossorigin="anonymous"
     ></script>
     <!-- Custom Js File -->
-    <script src="../dist/bundle.js"></script>
+    <script src="./dist/bundle.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
