fix: logo no showing on index.html

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               >
                 <img
                   class="img-fluid img-custom d-md-block"
-                  src="../img/logo.png"
+                  src="./img/logo.png"
                   alt=""
                 />
                 <span class="card-title h1 pl-2"
